@@ -1,28 +1,30 @@
 package com.fufu.terminal.service.sillytavern;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fufu.terminal.dto.sillytavern.VersionInfoDto;
 import com.fufu.terminal.model.CommandResult;
 import com.fufu.terminal.model.SshConnection;
 import com.fufu.terminal.service.SshCommandService;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 /**
  * Docker 版本管理服务，负责查询 SillyTavern 镜像的最新版本、执行升级和清理操作。
@@ -32,7 +34,7 @@ import java.util.stream.Collectors;
  *     <li>从 GitHub API 获取可用的发行版本。</li>
  *     <li>查询指定容器的当前版本和最新版本信息。</li>
  *     <li>以异步方式安全地升级容器到指定版本。</li>
- *     <li>清理不再使用的旧镜像。</li>
+ *     <li>高效清理不再使用的旧镜像。</li>
  * </ul>
  * </p>
  * <p>
@@ -78,43 +80,43 @@ public class DockerVersionService {
     ) {}
 
     /**
-     * 获取指定容器的升级锁。
+     * 获取指定容器的升级锁。如果锁不存在，则创建一个新的。
      *
      * @param containerName 容器名称
-     * @return 对应的 ReentrantLock
+     * @return 对应容器的 {@link ReentrantLock} 实例
      */
-    private ReentrantLock getUpgradeLock(String containerName) {
-        // 每个容器独立锁，确保升级操作线程安全
+    private ReentrantLock getUpgradeLock(final String containerName) {
         return upgradeLocks.computeIfAbsent(containerName, k -> new ReentrantLock());
     }
 
     /**
      * 获取容器当前版本及可用最新版本信息。
      *
-     * @param connection    SSH 连接
+     * @param connection    SSH 连接信息
      * @param containerName 容器名称
-     * @return 版本信息 DTO
+     * @return 包含版本信息的 {@link VersionInfoDto}
      */
-    public VersionInfoDto getVersionInfo(SshConnection connection, String containerName) {
-        log.debug("获取版本信息，容器: {}", containerName);
+    public VersionInfoDto getVersionInfo(final SshConnection connection, final String containerName) {
+        log.debug("获取容器 {} 的版本信息...", containerName);
 
-        VersionInfoDto versionInfo = new VersionInfoDto();
+        final VersionInfoDto versionInfo = new VersionInfoDto();
         versionInfo.setContainerName(containerName);
         versionInfo.setLastChecked(LocalDateTime.now());
 
         try {
-            String currentVersion = getCurrentContainerVersion(connection, containerName);
+            final String currentVersion = getCurrentContainerVersion(connection, containerName);
             versionInfo.setCurrentVersion(currentVersion);
 
-            List<String> availableVersions = getAvailableVersions();
+            final List<String> availableVersions = getAvailableVersions();
             versionInfo.setAvailableVersions(availableVersions);
 
             if (!availableVersions.isEmpty()) {
-                versionInfo.setLatestVersion(availableVersions.get(0));
-                versionInfo.setHasUpdate(!currentVersion.equals(availableVersions.get(0)));
+                final String latestVersion = availableVersions.get(0);
+                versionInfo.setLatestVersion(latestVersion);
+                versionInfo.setHasUpdate(!currentVersion.equals(latestVersion));
             }
         } catch (Exception e) {
-            log.error("获取版本信息失败: {}", e.getMessage(), e);
+            log.error("获取容器 {} 版本信息失败: {}", containerName, e.getMessage(), e);
             versionInfo.setError("获取版本信息失败: " + e.getMessage());
         }
 
@@ -122,63 +124,58 @@ public class DockerVersionService {
     }
 
     /**
-     * 获取容器当前使用的镜像版本。
+     * 获取容器当前正在使用的镜像版本标签。
      *
-     * @param connection    SSH 连接
+     * @param connection    SSH 连接信息
      * @param containerName 容器名称
-     * @return 镜像版本号
+     * @return 镜像的版本标签。如果无法获取，则返回 "unknown"。
      */
-    private String getCurrentContainerVersion(SshConnection connection, String containerName) {
+    private String getCurrentContainerVersion(final SshConnection connection, final String containerName) {
         try {
-            String result = executeCommand(connection,
+            final String imageFullName = executeCommand(connection,
                     String.format("sudo docker inspect %s --format='{{.Config.Image}}'", containerName));
-            if (result.contains(":")) {
-                String[] parts = result.trim().split(":");
-                return parts[parts.length - 1];
+            if (imageFullName.contains(":")) {
+                return imageFullName.substring(imageFullName.lastIndexOf(':') + 1).trim();
             }
             return DEFAULT_VERSION;
         } catch (Exception e) {
-            log.warn("无法获取容器版本信息: {}", e.getMessage());
+            log.warn("无法获取容器 {} 的版本信息: {}", containerName, e.getMessage());
             return "unknown";
         }
     }
 
     /**
-     * 从 GitHub Releases 获取最新的正式版本列表。
+     * 从 GitHub Releases API 获取最新的正式版本列表。
      * <p>
      * 此方法会调用 GitHub API，筛选出非草稿、非预发布的前 {@value #MAX_VERSION_COUNT} 个版本。
-     * 结果会被缓存，以减少对外部 API 的调用频率。
-     * 如果 API 调用失败，将返回一个包含 "latest", "staging", "release" 的默认列表。
+     * 结果会被缓存以减少网络请求。如果 API 调用失败，将返回一个包含默认值的列表。
      * </p>
      *
      * @return 可用版本号的列表 (例如 ["1.11.0", "1.10.3"])。
      */
     @Cacheable(value = "sillytavern-versions", unless = "#result == null || #result.isEmpty()")
     public List<String> getAvailableVersions() {
-        log.debug("从 GitHub API 获取版本信息...");
+        log.debug("正在从 GitHub API 获取可用版本列表...");
         try {
-            // 获取API响应并让Jackson自动映射到对象数组
-            String response = restTemplate.getForObject(GITHUB_API_URL + "?per_page=10", String.class);
-            GitHubRelease[] releases = objectMapper.readValue(response, GitHubRelease[].class);
+            final String response = restTemplate.getForObject(GITHUB_API_URL + "?per_page=10", String.class);
+            final JsonNode releasesNode = objectMapper.readTree(response);
 
-            // 使用Stream API进行过滤、映射和收集
-            List<String> versions = Arrays.stream(releases)
-                    .filter(r -> r != null && !r.prerelease() && !r.draft() && r.tagName() != null)
-                    .map(GitHubRelease::tagName)
-                    .map(tagName -> tagName.startsWith("v") ? tagName.substring(1) : tagName) // 移除 'v' 前缀
+            final List<String> versions = StreamSupport.stream(releasesNode.spliterator(), false)
+                    .filter(node -> node.has("tag_name") && !node.path("prerelease").asBoolean(true) && !node.path("draft").asBoolean(true))
+                    .map(node -> node.get("tag_name").asText())
+                    .map(tagName -> tagName.startsWith("v") ? tagName.substring(1) : tagName)
                     .limit(MAX_VERSION_COUNT)
-                    .collect(Collectors.toList());
+                    .toList(); // JDK 16+
 
             if (versions.isEmpty()) {
                 log.warn("未能从 GitHub API 获取到任何有效的正式版本，将使用默认版本。");
-                versions.add(DEFAULT_VERSION);
+                return List.of(DEFAULT_VERSION);
             }
 
-            log.info("成功获取到 {} 个可用版本", versions.size());
+            log.info("成功获取到 {} 个可用版本。", versions.size());
             return versions;
         } catch (Exception e) {
-            log.error("获取可用版本失败，将返回默认列表: {}", e.getMessage(), e);
-            // API调用失败时的回退机制
+            log.error("从 GitHub API 获取可用版本失败，将返回默认列表: {}", e.getMessage(), e);
             return List.of(DEFAULT_VERSION, "staging", "release");
         }
     }
@@ -196,46 +193,46 @@ public class DockerVersionService {
      * @param targetVersion    目标版本号
      * @param progressCallback 用于接收进度更新的消费者回调
      * @return 一个代表异步升级任务的 {@link CompletableFuture}
-     * @throws RuntimeException 如果升级操作正在进行或升级过程中发生错误
+     * @throws IllegalStateException 如果该容器的升级操作已在进行中
      */
-    public CompletableFuture<Void> upgradeToVersion(SshConnection connection, String containerName,
-                                                    String targetVersion, Consumer<String> progressCallback) {
+    public CompletableFuture<Void> upgradeToVersion(final SshConnection connection, final String containerName,
+                                                    final String targetVersion, final Consumer<String> progressCallback) {
         return CompletableFuture.runAsync(() -> {
-            ReentrantLock lock = getUpgradeLock(containerName);
+            final ReentrantLock lock = getUpgradeLock(containerName);
             if (!lock.tryLock()) {
-                String errorMsg = "容器 " + containerName + " 正在进行升级操作，请稍后再试";
+                final String errorMsg = "容器 " + containerName + " 的升级操作已在进行中，请稍后再试。";
                 log.warn(errorMsg);
                 progressCallback.accept(errorMsg);
                 throw new IllegalStateException(errorMsg);
             }
             try {
                 log.info("开始升级容器 {} 到版本 {}", containerName, targetVersion);
-                String targetImage = SILLYTAVERN_IMAGE_REPO + ":" + targetVersion;
+                final String targetImage = SILLYTAVERN_IMAGE_REPO + ":" + targetVersion;
 
                 progressCallback.accept("检查容器状态...");
                 if (!checkContainerExists(connection, containerName)) {
-                    throw new RuntimeException("容器 " + containerName + " 不存在");
+                    throw new RuntimeException("容器 " + containerName + " 不存在。");
                 }
 
-                String currentImage = getCurrentImage(connection, containerName);
+                final String currentImage = getCurrentImage(connection, containerName);
 
-                progressCallback.accept("停止容器...");
+                progressCallback.accept("停止当前容器...");
                 executeCommand(connection, String.format("sudo docker stop %s", containerName));
 
-                progressCallback.accept("拉取新版本镜像: " + targetVersion);
+                progressCallback.accept("拉取新版本镜像: " + targetVersion + "...");
                 executeCommand(connection, String.format("sudo docker pull %s", targetImage));
 
-                progressCallback.accept("更新容器镜像...");
+                progressCallback.accept("移除旧容器...");
                 executeCommand(connection, String.format("sudo docker rm %s", containerName));
 
-                String createCommand = buildCreateCommand(connection, containerName, targetImage);
+                progressCallback.accept("使用新镜像重建容器...");
+                final String createCommand = buildCreateCommand(connection, containerName, targetImage);
                 executeCommand(connection, createCommand);
 
                 progressCallback.accept("启动更新后的容器...");
                 executeCommand(connection, String.format("sudo docker start %s", containerName));
 
-                // 使用轮询等待容器启动，而不是固定时间的休眠
-                progressCallback.accept("等待容器启动...");
+                progressCallback.accept("等待容器启动完成...");
                 waitForContainerToStart(connection, containerName);
 
                 progressCallback.accept("清理旧镜像...");
@@ -247,13 +244,13 @@ public class DockerVersionService {
                 log.info("容器 {} 成功升级到版本 {}", containerName, targetVersion);
 
             } catch (Exception e) {
-                log.error("版本升级失败，容器: {} - {}", containerName, e.getMessage(), e);
-                progressCallback.accept("升级失败: " + e.getMessage());
-                // 将异常重新抛出，以便CompletableFuture可以捕获它
-                throw new RuntimeException("版本升级失败: " + e.getMessage(), e);
+                final String failureMsg = "升级失败: " + e.getMessage();
+                log.error("容器 {} 升级失败: {}", containerName, e.getMessage(), e);
+                progressCallback.accept(failureMsg);
+                throw new RuntimeException(failureMsg, e);
             } finally {
                 lock.unlock();
-                log.debug("容器 {} 的升级锁已释放", containerName);
+                log.debug("容器 {} 的升级锁已释放。", containerName);
             }
         });
     }
@@ -266,179 +263,187 @@ public class DockerVersionService {
      * 如果容器在预设的重试次数内成功启动，方法将正常返回。否则，将抛出异常。
      * </p>
      *
-     * @param connection    SSH 连接
+     * @param connection    SSH 连接信息
      * @param containerName 容器名称
-     * @throws Exception 如果在规定时间内容器未能启动，或命令执行被中断
+     * @throws InterruptedException 如果线程在休眠时被中断
+     * @throws RuntimeException 如果在规定时间内容器未能启动
      */
-    private void waitForContainerToStart(SshConnection connection, String containerName) throws Exception {
+    private void waitForContainerToStart(final SshConnection connection, final String containerName) throws InterruptedException {
         log.debug("等待容器 {} 启动...", containerName);
         for (int i = 0; i < CONTAINER_START_RETRIES; i++) {
             try {
-                String status = executeCommand(connection,
+                final String status = executeCommand(connection,
                         String.format("sudo docker inspect %s --format='{{.State.Running}}'", containerName));
                 if ("true".equalsIgnoreCase(status.trim())) {
-                    log.info("容器 {} 已成功启动", containerName);
-                    return; // 成功启动，退出轮询
+                    log.info("容器 {} 已成功启动。", containerName);
+                    return;
                 }
-            } catch (RuntimeException e) {
-                // inspect 命令可能会在容器刚创建时短暂失败，记录警告并继续重试
-                log.warn("检查容器状态失败 (尝试 {}/{})，将重试: {}", i + 1, CONTAINER_START_RETRIES, e.getMessage());
+            } catch (Exception e) {
+                log.warn("检查容器 {} 状态失败 (尝试 {}/{})，将重试: {}", containerName, i + 1, CONTAINER_START_RETRIES, e.getMessage());
             }
             Thread.sleep(CONTAINER_START_INTERVAL_MS);
         }
-        throw new RuntimeException("容器 " + containerName + " 在规定时间内未能启动");
+        throw new RuntimeException("容器 " + containerName + " 在规定时间内未能启动。");
     }
 
     /**
-     * 清理未使用的 Docker 镜像。
+     * 高效清理未被任何容器使用的 `sillytavern` 镜像。
+     * <p>
+     * 此方法通过两次 SSH 命令批量获取数据，然后在本地进行比较，避免了 N+1 查询问题。
+     * 1. 获取所有 `sillytavern` 镜像的 ID 和标签。
+     * 2. 获取所有正在被容器使用的镜像的 ID。
+     * 3. 计算差集，得到未使用的镜像并删除。
+     * </p>
      *
-     * @param connection SSH 连接
-     * @throws Exception 清理失败时抛出
+     * @param connection SSH 连接信息
      */
-    public void cleanupUnusedImages(SshConnection connection) throws Exception {
+    public void cleanupUnusedImages(final SshConnection connection) {
         log.info("开始清理未使用的 Docker 镜像...");
-        executeCommand(connection, "sudo docker image prune -f");
+        try {
+            // 1. 获取所有 sillytavern 镜像的 ID -> 标签 映射
+            final String allImagesOutput = executeCommand(connection,
+                    String.format("sudo docker images %s --format '{{.ID}} {{.Tag}}'", SILLYTAVERN_IMAGE_REPO));
+            final Map<String, String> allSillyTavernImages = Arrays.stream(allImagesOutput.split("\n"))
+                    .filter(StringUtils::hasText)
+                    .map(line -> line.split("\\s+", 2))
+                    .filter(parts -> parts.length == 2)
+                    .collect(Collectors.toMap(parts -> parts[0], parts -> parts[1], (tag1, tag2) -> tag1)); // (ID, Tag)
 
-        String result = executeCommand(connection,
-                "sudo docker images ghcr.io/sillytavern/sillytavern --format '{{.Repository}}:{{.Tag}} {{.ID}}'");
-        String[] lines = result.split("\n");
-        List<String> imagesToRemove = new ArrayList<>();
+            // 2. 获取所有正在被容器使用的镜像的 ID (使用 inspect 获取更可靠的完整 ID)
+            final String usedImageIdsOutput = executeCommand(connection,
+                    "sudo docker inspect $(sudo docker ps -a -q) --format '{{.Image}}'");
+            final Set<String> usedImageIds = Arrays.stream(usedImageIdsOutput.split("\n"))
+                    .filter(StringUtils::hasText)
+                    .map(id -> id.startsWith("sha256:") ? id.substring(7) : id) // 规范化ID
+                    .collect(Collectors.toSet());
 
-        for (String line : lines) {
-            if (line.trim().isEmpty()) continue;
-            String[] parts = line.trim().split(" ");
-            if (parts.length >= 2) {
-                String imageTag = parts[0];
-                String imageId = parts[1];
-                if (!isImageInUse(connection, imageId)) {
-                    imagesToRemove.add(imageTag);
+            // 3. 找出未被使用的镜像并删除
+            final List<String> imagesToRemove = allSillyTavernImages.entrySet().stream()
+                    .filter(entry -> !usedImageIds.contains(entry.getKey())) // 过滤出未被使用的镜像
+                    .map(entry -> SILLYTAVERN_IMAGE_REPO + ":" + entry.getValue()) // 构造成 "repo:tag" 格式
+                    .toList();
+
+            if (imagesToRemove.isEmpty()) {
+                log.info("没有发现可清理的未使用镜像。");
+                return;
+            }
+
+            log.info("发现 {} 个未使用的镜像，准备清理: {}", imagesToRemove.size(), imagesToRemove);
+            for (final String image : imagesToRemove) {
+                try {
+                    executeCommand(connection, String.format("sudo docker rmi %s", image));
+                    log.info("已删除未使用的镜像: {}", image);
+                } catch (Exception e) {
+                    log.warn("删除镜像 {} 失败: {}", image, e.getMessage());
                 }
             }
-        }
+            log.info("镜像清理完成，共处理了 {} 个镜像。", imagesToRemove.size());
 
-        for (String image : imagesToRemove) {
-            try {
-                executeCommand(connection, String.format("sudo docker rmi %s", image));
-                log.info("已删除未使用的镜像: {}", image);
-            } catch (Exception e) {
-                log.warn("删除镜像失败 {}: {}", image, e.getMessage());
-            }
+        } catch (Exception e) {
+            log.error("清理未使用镜像时发生错误: {}", e.getMessage(), e);
         }
-        log.info("镜像清理完成，删除了 {} 个未使用的镜像", imagesToRemove.size());
     }
 
     /**
-     * 检查容器是否存在。
+     * 检查指定的 Docker 容器是否存在。
      *
-     * @param connection    SSH 连接
+     * @param connection    SSH 连接信息
      * @param containerName 容器名称
-     * @return 存在返回 true，否则 false
+     * @return 如果容器存在，返回 {@code true}；否则返回 {@code false}。
      */
-    private boolean checkContainerExists(SshConnection connection, String containerName) {
+    private boolean checkContainerExists(final SshConnection connection, final String containerName) {
         try {
-            String result = executeCommand(connection,
-                    String.format("sudo docker ps -a --filter name=%s --format '{{.ID}}'", containerName));
+            final String result = executeCommand(connection,
+                    String.format("sudo docker ps -a --filter name=^%s$ --format '{{.ID}}'", containerName));
             return !result.trim().isEmpty();
         } catch (Exception e) {
-            log.warn("检查容器是否存在时出错: {}", e.getMessage());
+            log.warn("检查容器 {} 是否存在时出错: {}", containerName, e.getMessage());
             return false;
         }
     }
 
     /**
-     * 获取容器当前使用的镜像（带标签）。
+     * 获取容器当前使用的完整镜像名称（包括仓库和标签）。
      *
-     * @param connection    SSH 连接
+     * @param connection    SSH 连接信息
      * @param containerName 容器名称
-     * @return 镜像名:标签
+     * @return 完整的镜像名称，例如 "ghcr.io/sillytavern/sillytavern:1.11.0"。获取失败则返回 {@code null}。
      */
-    private String getCurrentImage(SshConnection connection, String containerName) {
+    private String getCurrentImage(final SshConnection connection, final String containerName) {
         try {
             return executeCommand(connection,
                     String.format("sudo docker inspect %s --format='{{.Config.Image}}'", containerName)).trim();
         } catch (Exception e) {
-            log.warn("获取容器镜像信息失败: {}", e.getMessage());
+            log.warn("获取容器 {} 的当前镜像信息失败: {}", containerName, e.getMessage());
             return null;
         }
     }
 
     /**
-     * 构建容器创建命令，尽量复用原有端口和卷挂载配置。
+     * 基于现有容器的配置，构建一个新的 `docker create` 命令。
+     * <p>
+     * 此方法会尝试保留原容器的端口映射和卷挂载配置。
+     * 如果获取配置失败，将回退到一套默认配置。
+     * </p>
      *
-     * @param connection    SSH 连接
+     * @param connection    SSH 连接信息
      * @param containerName 容器名称
-     * @param image         镜像名:标签
-     * @return docker create 命令字符串
+     * @param image         新容器要使用的镜像
+     * @return 完整的 `docker create` 命令字符串
      */
-    private String buildCreateCommand(SshConnection connection, String containerName, String image) {
+    private String buildCreateCommand(final SshConnection connection, final String containerName, final String image) {
         try {
-            String portInfo = executeCommand(connection,
-                    String.format("sudo docker inspect %s --format='{{range $p, $conf := .NetworkSettings.Ports}} -p {{(index $conf 0).HostPort}}:{{$p}} {{end}}'", containerName));
-            String volumeInfo = executeCommand(connection,
-                    String.format("sudo docker inspect %s --format='{{range .Mounts}} -v {{.Source}}:{{.Destination}} {{end}}'", containerName));
+            final String portInfo = executeCommand(connection,
+                    String.format("sudo docker inspect %s --format='{{range $p, $conf := .NetworkSettings.Ports}}{{range $conf}} -p {{.HostPort}}:{{$p | split \"/\" | index 0}}{{end}}{{end}}'", containerName));
+            final String volumeInfo = executeCommand(connection,
+                    String.format("sudo docker inspect %s --format='{{range .Mounts}} -v {{.Source}}:{{.Destination}}{{end}}'", containerName));
             return String.format("sudo docker create --name %s %s %s %s",
                     containerName, portInfo.trim(), volumeInfo.trim(), image);
         } catch (Exception e) {
-            log.warn("获取容器配置失败，使用默认配置: {}", e.getMessage());
+            log.warn("获取容器 {} 的配置失败，将使用默认配置回退: {}", containerName, e.getMessage());
             return String.format("sudo docker create --name %s -p 8000:8000 -v /opt/sillytavern/data:/app/data %s",
                     containerName, image);
         }
     }
 
     /**
-     * 清理指定的旧镜像。
+     * 清理指定的旧 Docker 镜像。
      *
-     * @param connection    SSH 连接
-     * @param imageToRemove 镜像名:标签
+     * @param connection    SSH 连接信息
+     * @param imageToRemove 要移除的镜像的完整名称（例如 "repo:tag"）
      */
-    private void cleanupOldImage(SshConnection connection, String imageToRemove) {
+    private void cleanupOldImage(final SshConnection connection, final String imageToRemove) {
         try {
             executeCommand(connection, String.format("sudo docker rmi %s", imageToRemove));
-            log.info("已清理旧镜像: {}", imageToRemove);
+            log.info("已成功清理旧镜像: {}", imageToRemove);
         } catch (Exception e) {
-            log.warn("清理旧镜像失败 {}: {}", imageToRemove, e.getMessage());
+            log.warn("清理旧镜像 {} 失败 (可能仍有其他容器在使用): {}", imageToRemove, e.getMessage());
         }
     }
 
     /**
-     * 检查镜像是否被任何容器使用。
+     * 执行 SSH 命令并返回其标准输出。
      *
-     * @param connection SSH 连接
-     * @param imageId    镜像 ID
-     * @return 被使用返回 true，否则 false
+     * @param connection SSH 连接信息
+     * @param command    要执行的命令字符串
+     * @return 命令的标准输出内容
+     * @throws InterruptedException 如果命令执行被中断
+     * @throws RuntimeException 如果命令执行失败（退出码非0）
      */
-    private boolean isImageInUse(SshConnection connection, String imageId) {
+    private String executeCommand(final SshConnection connection, final String command) throws InterruptedException {
         try {
-            String result = executeCommand(connection,
-                    String.format("sudo docker ps -a --filter ancestor=%s --format '{{.ID}}'", imageId));
-            return !result.trim().isEmpty();
-        } catch (Exception e) {
-            log.warn("检查镜像是否被使用时出错: {}", e.getMessage());
-            return true; // 出错时保守处理，认为镜像在使用中
-        }
-    }
-
-    /**
-     * 执行 SSH 命令并返回标准输出。
-     *
-     * @param connection SSH 连接
-     * @param command    命令字符串
-     * @return 命令标准输出
-     * @throws Exception 执行失败时抛出
-     */
-    private String executeCommand(SshConnection connection, String command) throws Exception {
-        try {
-            CommandResult result = sshCommandService.executeInternal(connection.getJschSession(), command);
+            final CommandResult result = sshCommandService.executeInternal(connection.getJschSession(), command);
             if (result.exitStatus() != 0) {
-                String errorMsg = "命令执行失败，退出码 " + result.exitStatus() +
-                        ": " + result.stderr();
-                log.debug("命令执行失败: {} - {}", command, errorMsg);
+                final String errorMsg = String.format("命令执行失败 (退出码: %d): %s", result.exitStatus(), result.stderr());
+                log.debug("命令 '{}' 执行失败: {}", command, errorMsg);
                 throw new RuntimeException(errorMsg);
             }
             return result.stdout();
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
-            throw new Exception("命令执行被中断: " + command, e);
+            throw new InterruptedException("命令执行被中断: " + command);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
         }
     }
 }
